--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -1,5 +1,5 @@
 <footer class="container">
     <p>Detta skolprojekt är gjort av Elliot Thurén i sammarbete med ES20 från
         <a href="https://www.ntigymnasiet.se/umea/" target="_blank">NTI Gymnasiet Umeå</a>.
-    <a href="https://github.com/NTIG-Umea/wu2-spel-ElliotThuren">Public GitHub Repository</p>
+    <a href="https://github.com/NTIG-Umea/wu2-spel-ElliotThuren" target="_blank">Public GitHub Repository</p>
 </footer>
